<resources>
    <string name="app_name">Friendship</string>
    <string name="animate_message_icon">Animate Message Icon</string>
    <string name="welcome_to">Welcome to</string>
    <string name="video_meeting_conference_app">Video Meeting | Conference App</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="your_example_com">your@nitp.ac.in</string>
    <string name="password">Password</string>
    <string name="password_hint">• • • • • • • • •</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_need_a_few_details_to_get_your_account_ready">We need a few details to get your account ready</string>
    <string name="first_name">Name</string>
    <string name="first_name_hint">Rajeev Kumar Mondal</string>
    <string name="last_name">Branch</string>
    <string name="last_name_hint">Electrical Engineering</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_out">Sign Out</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
    <string name="friendship_app">Friendship App</string>
    <string name="author">Author</string>
    <string name="safety">4.1. Company does not conduct background checks on users. You are responsible for verifying the identity and intentions of other users. \n4.2. You agree to follow safety guidelines and exercise caution when arranging to meet other users in person. \n4.3. You will not engage in any illegal, abusive, or harmful behaviour while using the App</string>
    <string name="user_content"> 5.1. By submitting content to the App (including text, photos, and other media), you grant the Company a non-exclusive, worldwide, royalty-free licence to use, reproduce, modify, distribute, and display your content. \n5.2. You retain ownership of your content but agree not to submit content that infringes on any third-party rights.</string>
    <string name="privacy">6.1. Our Privacy Policy explains how we collect, use, and share your personal information. By using the App, you consent to our Privacy Policy. \n6.2. You are responsible for any information you share with other users and should exercise caution when sharing personal data.</string>
    <string name="termination">7.1. Company reserves the right to suspend or terminate your account at any time for violations of this Agreement or for any other reason. \n7.2. You can terminate your account at any time by following the instructions in the App.</string>
    <string name="Disclaimer">8.1. The App is provided "as is" and without warranties of any kind, whether express or implied. \n8.2. Company is not responsible for the accuracy, reliability, or suitability of user-generated content.</string>
    <string name="limitation">9.1. Company shall not be liable for any indirect, incidental, special, consequential, or punitive damages arising from your use of the App. \n9.2. In no event shall Company\'s total liability exceed the amount you paid (if any) to use the App.</string>
    <string name="governing">This Agreement shall be governed by and construed in accordance with the laws of Jurisdiction, without regard to its conflict of law principles.</string>
    <string name="use">3.1. You agree to use the App solely for its intended purpose – connecting with other NITP students. Any commercial use or unauthorised access is strictly prohibited. \n3.2. You will not use the App to engage in harassment, hate speech, or any other behaviour that violates our Community Guidelines. \n3.3. You will not upload, share, or distribute inappropriate, offensive, or copyrighted content.</string>
    <string name="userAccount">2.1. You are responsible for maintaining the confidentiality of your account credentials and for all activities that occur under your account.\n2.2. You agree to provide accurate and complete information during registration and promptly update any changes.\n2.3. You may not create multiple accounts or impersonate others.</string>
    <string name="eligibility">1.1. You must be a part of  NIT family to use the App. By accessing or using the App, you represent and warrant that you meet the eligibility requirements and that all information provided is accurate and truthful.</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="terms">This Terms and Conditions Agreement is a legal agreement between User  and Friendship Company, governing your use of the Friendship mobile application and related services (collectively, the "App"). By accessing or using the App, you agree to be bound by the terms and conditions outlined in this Agreement. If you do not agree to these terms, please do not use the App.</string>
    <string name="que">If you have any questions or concerns about this Agreement, please contact us at:</string>
    <string name="contacts">[Contact Email]. [Company Name] [Company Address] [Company Website] [Contact Email] Date: [Current Date]</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_title_import">Import</string>
    <string name="nav_title_gallery">Gallery</string>
    <string name="nav_title_slideshow">Slideshow</string>
    <string name="nav_title_tools">Tools</string>
    <string name="nav_title_share">Share</string>
    <string name="nav_title_toggle_theme">Toggle Theme</string>
    <string name="title_topic_course">Design Thinking</string>
    <string name="number_courses">19 courses</string>
    <string name="msg_splash">EducationApp</string>
    <string name="title_hey">Hey, What would you like to learn today ?</string>
    <string name="edt_search">Search Here</string>
    <string name="title_course_design">Design Thinking</string>
    <string name="title_course_design_count">19 courses</string>
    <string name="title_course_coding">Coding</string>
    <string name="title_course_coding_count">21 courses</string>
    <string name="title_find_courses">Find your \nmatches courses</string>
    <string name="title_courses_available">10 course available</string>
    <string name="title_popular_courses">Popular Courses</string>
    <string name="more">. .</string>
    <string name="hello_message">Hello roger</string>
    <string name="percentage_course">%1$d%% Completed</string>
    <string name="text_see_more">See All</string>
    <string name="imageAccess">Image</string>
    <string name="message_banner">Refer your friends and\n earn free course *</string>
    <string name="title_drawer">Android developer</string>
    <string name="email_drawer">devhunter@movidev.com</string>
    <string name="title_menu">Menu</string>
    <string name="title_courses">Courses</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_user">User</string>
    <string name="title_tutorials">Tutorials</string>
    <string name="title_home_message">Continue to \nWebdeveloper Course</string>
    <string name="title_course">Design Basic</string>
    <string name="course_details">Learn design basics.</string>
    <string name="write_here">Write here</string>
    <string name="im_interested">I\'m interested in </string>
    <string name="single_selection">Single Selection</string>
    <string name="multi_selection">Multi Selection</string>
    <string name="report_user">Report User</string>
    <string-array name="interest_array">
        <item>READING</item>
        <item>WRITING</item>
        <item>SINGING</item>
        <item>LISTENING TO MUSIC</item>
        <item>DANCING</item>
        <item>PROGRAMMING</item>
        <item>PLAYING FOOTBALL</item>
        <item>SWIMMING</item>
    </string-array>
    <string name="title_activity_fullscreen_loader">FullscreenLoader</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="privacytitle1">When you use our services, you\'re trusting us with your information. We Understand this is a big responsibility and we work hard to protect your information.</string>
    <string name="privacydesc">This Privacy Policy is meant to help you understand what information we collect, why we collect it, and how you can update, manage, your information.</string>
    <string name="infos">- Personal Information: This includes your name, email address, photos, likings, unlikings, short bio and any information you choose to provide in your profile. \n- Usage Data: We collect data on how you interact with the app, such as your interactions, messages, and preferences. \n- Device Information: We don\'t take any information. - Location Information: We don\'t take any information.</string>
    <string name="infouse">- To Create and Manage Your Account: We use your personal information to set up and maintain your Friends app account. \n- Popularity Index: Your profile information helps us suggest potential matches based on your preferences. \n- Communication: We use your information to facilitate communication between you and other users. \n- Analytics: Your usage data helps us understand how our app is being used, enabling improvements. \n- Personalization: We use your data to personalize your experience on the app.</string>
    <string name="todo">TODO</string>
    <string name="set_the_announcements">Set the announcements</string>
    <string name="add_event_poster_above">Add Event Poster above\n(3:4)Recommended</string>
    <string name="event_name_here">EVENT NAME HERE</string>
    <string name="event_subtitle_here">EVENT SUBTITLE HERE</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="event_description_here">EVENT DESCRIPTION HERE</string>
    <string name="event_link_for_registration_here">EVENT LINK FOR REGISTRATION HERE</string>
    <string name="any_other_link_1">ANY OTHER LINK 1</string>
    <string name="any_other_link_2">ANY OTHER LINK 2</string>
    <string name="if_any_pdfs_or_any_other_documents_kindly_attach_the_google_drive_link">if any pdfs or any other documents kindly attach the google drive link:</string>
    <string name="set_notification">Set Notification</string>
    <string name="xyz">XYZ</string>
    <string name="it_s_empty_for_now">It\'s empty for now!</string>
    <string name="once_people_start_joining_app_you_can_view_the_list_of_those_users_here">Once people start joining app, you can view the list of those users here.</string>
</resources>