<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A6D7FF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    >
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A6D7FF"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#A6D7FF"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="30dp"
                android:layout_weight="40"
                android:fontFamily="@font/bariol_bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/set_the_announcements"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp" />




            <ImageView
                android:id="@+id/ivAnnouncements"
                android:layout_width="200dp"
                android:layout_height="225dp"
                android:padding="@dimen/margin_10_dp"
                android:background="@drawable/container_search"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:contentDescription="@string/todo" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bariol_bold"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_event_poster_above"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/eventname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:inputType="textCapSentences|textMultiLine"
                android:autofillHints="username"
                android:maxLines="1"
                android:fontFamily="@font/bariol_regular"
                android:textAlignment="center"
                android:layout_margin="20dp"
                android:padding="5dp"
                android:hint="@string/event_name_here"
                android:background="@drawable/container_search"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimaryDark"
                android:textColorHint="@color/color_hint"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/eventsubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:inputType="textCapSentences|textMultiLine"
                android:autofillHints="username"
                android:maxLines="2"
                android:fontFamily="@font/bariol_regular"
                android:textAlignment="center"
                android:layout_margin="20dp"
                android:padding="5dp"
                android:hint="@string/event_subtitle_here"
                android:background="@drawable/container_search"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimaryDark"
                android:textColorHint="@color/color_hint"
                android:textSize="22sp" />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginHorizontal="30dp">
                <EditText
                    android:id="@+id/eventdate"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:hint="@string/date"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/container_search"
                    android:layout_weight="0.7"
                    android:autofillHints="" />
                <EditText
                    android:id="@+id/eventmonth"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:hint="@string/month"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:background="@drawable/container_search"
                    android:layout_weight="1.3"
                    android:autofillHints="" />


            </LinearLayout>
            <EditText
                android:id="@+id/eventdiscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:inputType="textCapSentences|textMultiLine"
                android:autofillHints="username"
                android:fontFamily="@font/bariol_regular"
                android:textAlignment="center"
                android:layout_margin="20dp"
                android:padding="5dp"
                android:hint="@string/event_description_here"
                android:background="@drawable/container_search"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimaryDark"
                android:textColorHint="@color/color_hint"
                android:textSize="22sp" />
            <EditText
                android:id="@+id/eventlink1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:inputType="textCapSentences|textMultiLine"
                android:autofillHints="username"
                android:fontFamily="@font/bariol_regular"
                android:textAlignment="center"
                android:layout_margin="20dp"
                android:padding="8dp"
                android:hint="@string/event_link_for_registration_here"
                android:background="@drawable/container_search"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimaryDark"
                android:textColorHint="@color/color_hint"
                android:textSize="17sp" />
            <EditText
                android:id="@+id/eventlink2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:inputType="textCapSentences|textMultiLine"
                android:autofillHints="username"
                android:fontFamily="@font/bariol_regular"
                android:textAlignment="center"
                android:layout_margin="20dp"
                android:padding="5dp"
                android:hint="@string/any_other_link_1"
                android:background="@drawable/container_search"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimaryDark"
                android:textColorHint="@color/color_hint"
                android:textSize="17sp" />
            <EditText
                android:id="@+id/eventlink3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:inputType="textCapSentences|textMultiLine"
                android:autofillHints="username"
                android:fontFamily="@font/bariol_regular"
                android:textAlignment="center"
                android:layout_margin="20dp"
                android:padding="5dp"
                android:hint="@string/any_other_link_2"
                android:background="@drawable/container_search"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimaryDark"
                android:textColorHint="@color/color_hint"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/bariol_bold"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/if_any_pdfs_or_any_other_documents_kindly_attach_the_google_drive_link"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnSet"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/container_search"
                android:includeFontPadding="false"
                android:text="@string/set_notification"
                android:textColor="@color/colorTextIcons"
                android:textSize="12sp"
                android:layout_marginBottom="30dp"
                />




        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</ScrollView>