<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BasicDetails.DetailsActivity2"
    >
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A6D7FF"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#A6D7FF"
            android:layout_marginTop="-15dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/bariol_regular"
                android:textAlignment="center"
                android:text="@string/we_need_a_few_details_to_get_your_account_ready"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp" />



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorBackground"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/first_name"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/inputFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/xyz"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/last_name"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/branch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bariol_bold"


                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/email"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/your_example_com"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="9dp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/password"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/inputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/password_hint"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/confirm_password"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/inputConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/password_hint"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="15sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="12sp" />

                <ProgressBar
                    android:id="@+id/progressBarSignUp"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/already_have_an_account"
                android:textColor="@color/colorPrimaryText"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="6dp"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textNoAccount" />











        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>